crates/dbdict/tests/snapshots/validate_spec__s07_range_on_string_type.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 472
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-wspace/dbdict
tables:
  - name: table
    columns:
      - name: c
        type: string
        examples: [a, z]
        range: ["a", "z"]
────────────────────────────────────────
error: [S07] A `string` column must not use `range`.
 --> dict.yaml:9:16
  |
4 |   - name: table
5 |     columns:
6 |       - name: c
...
9 |         range: ["a", "z"]
  |                ^^^^^^^^^ has type `string` but uses `range`
